Salesforce/main/default/objects/Recomenda_o_de_variedade__c/Recomenda_o_de_variedade__c.object-meta.xml
<CustomObject>
    <label>Recomendação de variedade</label>
    <nameField>
        <label>Nombre de Recomendação de variedade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recomendações de variedades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>