Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Algoritmo__c.field-meta.xml
<CustomField>
    <fullName>Algoritmo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Algoritmo</label>
    <type>Checkbox</type>
</CustomField>