Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Altitude_maxima__c.field-meta.xml
<CustomField>
    <fullName>Altitude_maxima__c</fullName>
    <label>Altitude maxima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>