Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Altitude_minima__c.field-meta.xml
<CustomField>
    <fullName>Altitude_minima__c</fullName>
    <label>Altitude minima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>