Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Altura_de_planta_cm__c.field-meta.xml
<CustomField>
    <fullName>Altura_de_planta_cm__c</fullName>
    <label>Altura de planta (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>