Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Densidade_Min__c.field-meta.xml
<CustomField>
    <fullName>Densidade_Min__c</fullName>
    <label>Densidade Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>