Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Recomendações de variedades</relationshipLabel>
    <relationshipName>Recomenda_es_de_variedades</relationshipName>
    <type>Lookup</type>
</CustomField>