Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Exig_ncia_a_Fertilidade__c.field-meta.xml
<CustomField>
    <fullName>Exig_ncia_a_Fertilidade__c</fullName>
    <label>Exigência a Fertilidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>