Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Fase_de_Aprova_o__c.field-meta.xml
<CustomField>
    <fullName>Fase_de_Aprova_o__c</fullName>
    <label>Fase de Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em processo</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>