Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Fim_Antecipado__c.field-meta.xml
<CustomField>
    <fullName>Fim_Antecipado__c</fullName>
    <label>Fim Antecipado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>