Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Fim_Preferencial__c.field-meta.xml
<CustomField>
    <fullName>Fim_Preferencial__c</fullName>
    <label>Fim Preferencial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>