Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Fim_Tolerado__c.field-meta.xml
<CustomField>
    <fullName>Fim_Tolerado__c</fullName>
    <label>Fim Tolerado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>