Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/In_cio_Preferencial__c.field-meta.xml
<CustomField>
    <fullName>In_cio_Preferencial__c</fullName>
    <label>Início Preferencial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>