Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Micro__c.field-meta.xml
<CustomField>
    <fullName>Micro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Micro</label>
    <referenceTo>Microrregi_o_de_Vendas__c</referenceTo>
    <relationshipLabel>Recomendações de variedades</relationshipLabel>
    <relationshipName>Recomenda_es_de_variedades</relationshipName>
    <type>Lookup</type>
</CustomField>