Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/PMG__c.field-meta.xml
<CustomField>
    <fullName>PMG__c</fullName>
    <label>PMG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>