Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Pontos_Fortes__c.field-meta.xml
<CustomField>
    <fullName>Pontos_Fortes__c</fullName>
    <label>Pontos Fortes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto potencial produtivo</fullName>
            </value>
            <value>
                <fullName>Superprecocidade: viabiliza a antecipação de semeadura visando 2a safra</fullName>
            </value>
            <value>
                <fullName>Excelente adaptação nas regiões de maior altitude</fullName>
            </value>
            <value>
                <fullName>Excelente adaptação nas regiões de menor altitude</fullName>
            </value>
            <value>
                <fullName>Ótima adaptação nas regiões de maior altitude</fullName>
            </value>
            <value>
                <fullName>Porte controlado com resistência ao acamamento</fullName>
            </value>
            <value>
                <fullName>Resistente ao acamamento</fullName>
            </value>
            <value>
                <fullName>Estabilidade produtiva</fullName>
            </value>
            <value>
                <fullName>Boa arquitetura de planta</fullName>
            </value>
            <value>
                <fullName>Precocidade</fullName>
            </value>
            <value>
                <fullName>Bom potencial produtivo com tolerância à Ferrugem Asiática</fullName>
            </value>
            <value>
                <fullName>Alto potencial produtivo nas regiões mais quentes</fullName>
            </value>
            <value>
                <fullName>Boa uniformidade e estrutura de planta</fullName>
            </value>
            <value>
                <fullName>Ampla região de adaptação</fullName>
            </value>
            <value>
                <fullName>Cultivar precoce que permite abertura de semeadura e plantio de 2a safra nas regiões mais quentes</fullName>
            </value>
            <value>
                <fullName>Excelente pacote sanitário</fullName>
            </value>
            <value>
                <fullName>Ampla janela de plantio.</fullName>
            </value>
            <value>
                <fullName>Alto potencial de ramificação</fullName>
                <label>Alto potencial de ramificação.</label>
            </value>
            <value>
                <fullName>Alto potencial de ramificação e resistência ao acamamento</fullName>
            </value>
            <value>
                <fullName>Ideal para ambientes de alta tecnologia.</fullName>
            </value>
            <value>
                <fullName>Recomendado para áreas de várzea</fullName>
            </value>
            <value>
                <fullName>Resistência a Phytophthora - Gene RPS1K</fullName>
            </value>
            <value>
                <fullName>Permite antecipação de plantio</fullName>
            </value>
            <value>
                <fullName>Amplia a janela de plantio da segunda safra</fullName>
            </value>
            <value>
                <fullName>Resistente a Phytophthora</fullName>
            </value>
            <value>
                <fullName>STS™ (Tolerante a sulfonilureias)</fullName>
            </value>
            <value>
                <fullName>Semiprecocidade</fullName>
            </value>
            <value>
                <fullName>Resistência a Nematoide de Cisto</fullName>
            </value>
            <value>
                <fullName>Amplia a janela de plantio de milho na 2ª safra</fullName>
            </value>
            <value>
                <fullName>Adaptada para o Mato Grosso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>