Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Porte__c.field-meta.xml
<CustomField>
    <fullName>Porte__c</fullName>
    <label>Porte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Médio</fullName>
            </value>
            <value>
                <fullName>Baixo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>