Salesforce/main/default/objects/Recomenda_o_de_variedade__c/fields/Regi_o__c.field-meta.xml
<CustomField>
    <fullName>Regi_o__c</fullName>
    <label>Região</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sul</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>